syntax = "proto3";

package rpc_client;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "pkg/rpc/rpc/rpc.proto";
import "session.proto";

option go_package = "rpc_client";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.gostring_all) = true;

service SessionService {
  rpc Close(CloseEvent) returns (google.protobuf.Any) {}
  rpc ReceiveData(rpc.RpcData) returns(google.protobuf.Any) {}
  rpc PushUpdates(PushUpdatesEvent) returns(google.protobuf.Any) {}
}
